--- a/style/style.css
+++ b/style/style.css
@@ -11,21 +11,30 @@ body{
 }
 
 #header{
-	
+	padding-left: 30%;	
 }
 #main{
 	font-weight: 300;
 }
 #descripcion{	
 	text-align: center;	
-	padding-top: 10%;
+	
 	padding-right: 40%;
 }
+#suscribe{
+
+	width: 500px;
+	background-color:  rgb(23,58,69);
+	color: #fff;
+	padding: 15px 15px 15px 15px;
+}
 #suscribe p{
+
 	font-size: 15px;
 }
 #info{
-	position: relative;
+	padding-left: 5%;
+	position: absolute;
 }
 .info-tit{
 	color: rgb(255, 114, 103);
