--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 body{
-	background-color:#fff;
+	/*background-color:#1A474E;*/
+	background-color:#F0EEEF;
 	color: #000;
 	font-size: 14px;
 	font-family: 'Open Sans', sans-serif;
@@ -11,32 +12,35 @@ body{
 }
 
 #header{
-	padding-left: 28%;	
+	padding-left: 15%;	
 }
 #img_logo{
-	width: 500px;
+	width: 800px;
 }
 
 #main{
 	font-weight: 300;
 }
-#descripcion{	
+#descripcion h1{	
 	text-align: center;	
-	font-size: 20px;
+	font-family: "Open Sans",Arial,sans-serif;
 	padding-right: 20%;
 	padding-bottom: 20px;
+	font-weight: 400;
+	font-size: 46px;
+	line-height: 50px;
+	margin-bottom: 14px;
 }
 
 #suscribe{
-	float: inherit;
-	width: 500px;
-	background-color:  rgb(184, 5, 69);
-	color: #fff;
 
+	float: inherit;
+	width: 70%;
+	background-color:  #1A474E;
+	color: #fff;
 	padding: 25px 15px 25px 15px;
-	
      	left:50%;
-     	margin:0 0 0 20%;
+     	margin:0 0 0 8%;
 }
 
 #suscribe p{
@@ -44,9 +48,8 @@ body{
 }
 
 #info{
-	padding-top: 15%;
-	padding-left: 5%;
-	
+	padding-top: 10%;
+	padding-left: 5%;	
 	position: absolute;
 }
 #cont{
@@ -64,7 +67,7 @@ body{
 }
 .mpo p{
 	width: 292.6px;
-	font-size: 12px;
+	font-size: 14px;
 	color: #625e58;
 	text-align: justify;
 	padding: 15px 15px 15px;
