--- a/style/style.css
+++ b/style/style.css
@@ -9,14 +9,14 @@ body{
 #container{
 	color: rgb(111, 110, 110);
 	padding-left: 10%;
+	text-align: center;
 }
 
 #header{
-	padding-left: 15%;	
+	padding-top: 190px;
+alignment-baseline: central;	
 }
-#img_logo{
-	width: 800px;
-}
+
 
 #main{
 	font-weight: 300;
@@ -36,7 +36,7 @@ body{
 #suscribe{
 
 	float: inherit;
-	width: 70%;
+	width: 90%;
 	background-color:  #1A474E;
 	color: #fff;
 	padding: 25px 15px 25px 15px;
@@ -49,7 +49,7 @@ body{
 }
 
 #info{
-	padding-top: 10%;
+	padding-top: 0%;
 	padding-left: 5%;	
 	position: absolute;
 }
@@ -75,13 +75,16 @@ body{
 }
 #footer{
 	
-	padding-top: 30%;
+	padding-top: 20%;
 }
 #footer p{
 	text-align: center;
 }
 
 
+#logo{
+	text-align: center;
+}
 
 input[type="email"]{
 	border:1px solid #ccc;
